# camp

./: .dockerignore  .gitignore  Cargo.toml  REMEMBERME.md  config.toml  main.Dockerfile  plans.md  serialized.txt  unsecured_config.toml
data/: index.html
fakeprod_data/: staff.csv
firebase/: .firebaserc
firebase/public/: camp.css  index.html
src/: auth.rs  config.rs  course.rs  inter.rs  lib.rs  main.rs  pace.rs  store.rs  user.rs  users.rs
src/inter/: admin.rs  boss.rs  mod.rs  student.rs  teacher.rs
src/store/: cal.rs  courses.rs  goals.rs  mod.rs  users.rs
static/: admin.css  admin.html  admin.js  api_request.css  api_request.js  boss.css  boss.js  cal.css  cal.js  camp.css  dialog.css  teacher.css  teacher.js  util.css  util.js
static/help/: teacher.html
templates/: admin.html  boss.html  boss_goal_row.html  boss_pace_table.html  login_error.html  student.html  teacher.html
test/: good_course_1.debug
test/env/: config.toml
