[package]
name = "camp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "^0.5"
blake3 = "^1.3"
csv = "^1.1"
log = "^0.4"
rand = "^0.8"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
simplelog = "^0.12"
tokio = { version = "^1.2", features = ["macros", "rt"] }
tokio-postgres = "^0.7"
toml = "^0.5"

[dev-dependencies]
serial_test = "^0.8"
tokio = { version = "^1.2", features = ["macros", "rt", "time"] }