[package]
name = "camp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "^0.5", features = ["query"] }
blake3 = "^1.3"
csv = "^1.1"
futures = "^0.3"
log = "^0.4"
rand = "^0.8"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
simplelog = "^0.12"
tokio = { version = "^1.2", features = ["macros", "rt"] }
tokio-postgres = { version = "^0.7", features = ["array-impls"] }
toml = "^0.5"
tower-http = { version = "^0.3", features = ["fs"] }

[dev-dependencies]
float-cmp = "^0.9"
serial_test = "^0.8"
tokio = { version = "^1.2", features = ["macros", "rt", "time"] }